--- a/index.html
+++ b/index.html
@@ -118,11 +118,11 @@ button {
 <body>
 
 <audio id="bg-music" loop>
-    <source src="music/song.mp3" type="audio/mpeg">
+    <source src="song.mp3" type="audio/mpeg">
 </audio>
 
 <div class="container">
-    <img src="images/her.jpg">
+    <img src="her.jpg">
     <h1>Happy Birthday 🎂</h1>
     <p>Happy Birthday to the girl who owns my heart ❤️</p>
 
@@ -176,4 +176,5 @@ function startFireworks() {
 
 </body>
 </html>
+
 
