--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Happy Birthday My cutu mera golgappa mwahhh ❤️</title>
+<title>Happy Birthday snigdhuu ❤️</title>
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="theme-color" content="#ff7fa3">
@@ -61,8 +61,8 @@ button {
 <div class="container">
   <img src="./her.jpg" alt="My Love">
 
-  <h1>Happy Birthday 🎂</h1>
-  <p>Happy Birthday to the girl who owns my heart ❤️</p>
+  <h1>Happy Birthday cutu 🎂</h1>
+  <p>Happy Birthday to the girl who owns my heart mera golgappa meri rasmali mwahhh ❤️</p>
 
   <button onclick="playMusic()">▶ Play Song</button><br>
   <button onclick="goFullScreen()">📱 Full Screen</button>
@@ -93,6 +93,7 @@ function goFullScreen() {
 
 </body>
 </html>
+
 
 
 
