--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ button {
   <img src="./her.jpg" alt="My Love">
 
   <h1>Happy Birthday cutu 🎂</h1>
-  <p>Happy Birthday to the girl who owns my heart ❤️ mera golgappa meri rasmali</p>
+  <p>Happy Birthday to the girl who owns my heart ❤️ mera golgappa meri rasmali mwahhhh</p>
 
   <button onclick="playMusic()">▶ Play Song</button><br>
   <button onclick="goFullScreen()">📱 Full Screen</button><br>
@@ -182,6 +182,7 @@ function startFireworks() {
 
 </body>
 </html>
+
 
 
 
